// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileStatusMessage renders as expected when file is uploaded 1`] = `
<div>
  <p
    class="amplify-text amplify-storagemanager__file__status amplify-storagemanager__file__status--success"
  >
    <span
      class="amplify-icon"
      style="width: 1em; height: 1em;"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.00016 16.1698L4.83016 11.9998L3.41016 13.4098L9.00016 18.9998L21.0002 6.99984L19.5902 5.58984L9.00016 16.1698Z"
          fill="currentColor"
        />
      </svg>
    </span>
     
    Upload successful!
  </p>
</div>
`;

exports[`FileStatusMessage renders as expected when file is uploading 1`] = `
<div>
  <p
    class="amplify-text amplify-storagemanager__file__status"
  >
    Uploading... 50%
  </p>
</div>
`;

exports[`FileStatusMessage renders as expected when file uploading is paused 1`] = `
<div>
  <p
    class="amplify-text amplify-storagemanager__file__status"
  >
    Uploading paused...
  </p>
</div>
`;

exports[`FileStatusMessage renders as expected when there is an error uploading 1`] = `
<div>
  <p
    class="amplify-text amplify-storagemanager__file__status amplify-storagemanager__file__status--error"
  >
    <span
      class="amplify-icon"
      style="width: 1em; height: 1em;"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM13 17H11V15H13V17ZM13 13H11V7H13V13Z"
          fill="currentColor"
        />
      </svg>
    </span>
     
    Error
  </p>
</div>
`;
